--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/functions": "^3.5.0",
     "azure-storage": "^2.10.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
